exports[`App mapDispatchToProps should handle onChange 1`] = `
Array [
  Array [
    Object {
      "authtoken": "something",
      "type": "brojects/action/SET_AUTHTOKEN",
    },
  ],
]
`;

exports[`App mapDispatchToProps should handle onClick 1`] = `
Array [
  Array [
    Object {
      "type": "brojects/action/GET_REPOS",
    },
  ],
  Array [
    Object {
      "repoFullName": "kriswep/modern-modular-javascript",
      "type": "brojects/action/GET_PROJECTS",
    },
  ],
  Array [
    Object {
      "projectId": "324041",
      "type": "brojects/action/GET_COLUMNS",
    },
  ],
  Array [
    Object {
      "columnId": "575404",
      "type": "brojects/action/GET_CARDS",
    },
  ],
]
`;

exports[`App mapDispatchToProps should handle onSubmit 1`] = `
Array [
  Array [
    Object {
      "columnId": "575404",
      "type": "brojects/action/GET_COLUMN_DATA",
    },
  ],
]
`;

exports[`App mapStateToProps should pass auth object 1`] = `
Object {
  "auth": Object {
    "some": "value",
  },
  "cards": undefined,
  "columnData": undefined,
  "columns": undefined,
  "currentRepo": undefined,
  "repos": Array [
    "value",
  ],
}
`;
